fix portfolio screen on mobile

--- a/style.css
+++ b/style.css
@@ -552,12 +552,15 @@ nav .fa-solid{
         background: #ff004f;
         position: fixed;
         top: 0;
-        right: -200px; 
+        right: -220px; 
         width: 200px;
         height: 100vh;
         padding-top: 50px; 
         z-index: 2; 
-        transition: right 0.5s; 
+        transition: right 0.5s;
+        overflow: hidden;
+        box-shadow: -2px 0 10px rgba(0,0,0,0.3);
+        transform: translateX(0);
     }
     nav ul li {
         display: block;
